@@ -1,0 +1,42 @@
+#   Programmer: limodou
+#   E-mail:     limodou@gmail.com
+#
+#   Copyleft 2009 limodou
+#
+#   Distributed under the terms of the GPL (GNU Public License)
+#
+#   UliPad is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the Free Software
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+#   $Id$
+
+from modules import Mixin
+import wx
+
+def add_mainframe_menu(menulist):
+   """ Add the PyLint item to the Tool menu"""
+   menulist.extend([('IDM_TOOL',
+       [
+           (200, 'IDM_TOOL_CANVAS', 'Canvas Test',
+            wx.ITEM_NORMAL, 'OnCanvasTest', tr('Test canvas API')),
+       ]), ])
+Mixin.setPlugin('mainframe', 'add_menu', add_mainframe_menu)
+
+def OnCanvasTest(win, event):
+    from CanvasPanel import Canvas
+    
+    w = Canvas(win)
+    w.Show()
+Mixin.setMixin('mainframe', 'OnCanvasTest', OnCanvasTest)
+
